--- a/package.json
+++ b/package.json
@@ -16,19 +16,36 @@
     "@fullcalendar/timegrid": "^6.1.8",
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.0.18",
+    "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-toggle": "^1.0.3",
+    "@tiptap/extension-bullet-list": "^2.2.1",
+    "@tiptap/extension-document": "^2.2.1",
+    "@tiptap/extension-heading": "^2.2.1",
+    "@tiptap/extension-list-item": "^2.2.1",
+    "@tiptap/extension-ordered-list": "^2.2.1",
+    "@tiptap/extension-paragraph": "^2.2.1",
+    "@tiptap/extension-text": "^2.2.1",
+    "@tiptap/pm": "^2.2.1",
+    "@tiptap/react": "^2.2.1",
+    "@tiptap/starter-kit": "^2.2.1",
     "@types/node": "20.6.0",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.15",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
     "eslint": "8.49.0",
     "eslint-config-next": "13.4.19",
     "framer-motion": "^10.16.4",
+    "lucide-react": "^0.320.0",
     "next": "13.4.19",
     "next-recaptcha-v3": "^1.2.0",
     "postcss": "8.4.29",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "tailwind-merge": "^2.2.1",
     "tailwindcss": "3.3.3",
+    "tailwindcss-animate": "^1.0.7",
     "typescript": "5.2.2"
   }
 }
